feat(#142): making the theme field editable
